PLUGINWIZARD-67 : Create Business Classes before AdminFeatures and XPage in order to affect them for CRUD's generation
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@53538 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_html_admin_alternative.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_html_admin_alternative.html
@@ -2,7 +2,7 @@
 
 <#case 0>
 <#if business_class?? >
-<${include} "tabs.html" /> 
+<${include} "${admin_feature.featureName?lower_case}_tabs.html" />
 <${macro}tabs tab="${business_class.businessClass?lower_case}" />
 
 <div class="row" >
@@ -46,7 +46,7 @@
 
 <#case 1>
 <#if business_class?? >
-<${include} "tabs.html" /> 
+<${include} "${admin_feature.featureName?lower_case}_tabs.html" />
 <${macro}tabs tab="${business_class.businessClass?lower_case}" />
 
 <div class="row" >
@@ -93,7 +93,7 @@
 
 <#case 2>
 <#if business_class?? > 
-<${include} "tabs.html" /> 
+<${include} "${admin_feature.featureName?lower_case}_tabs.html" />
 <${macro}tabs tab="${business_class.businessClass?lower_case}" />
 
 <div class="row-fluid" >
