--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_admin_feature.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_admin_feature.html
@@ -61,6 +61,26 @@
                         </select>               
                     </div> 
                 </div>
+                 
+                <div class="control-group">
+                    <label class="control-label" >#i18n{pluginwizard.pluginwizard_create_admin_feature.labelBusinessClass} :  </label>        
+                    <div class="controls">
+                        <#list combo_business_classes?sort_by('name') as business>
+                            <#assign used = false>
+                            <#list admin_features as admin_feature> 
+                                <#if admin_feature.getIdBusinessClasses()?seq_contains(business.code?number)>
+                                    <#assign used = true>
+                                </#if>
+                            </#list>
+                            <#if used>
+                                <input type="checkbox" disabled="disabled" name="id_business_class${business.code}" value="${business.code}" /> &nbsp; ${business.name}<br />
+                            <#else>
+                                <input type="checkbox" name="id_business_class${business.code}" value="${business.code}" /> &nbsp; ${business.name}<br />
+                            </#if>
+                        </#list>
+                    </div>   
+                </div>
+                
                 <div class="form-actions">                                                  
                     <button type="submit" name="action_createAdminFeature"class="btn btn-primary">
                         #i18n{pluginwizard.pluginwizard_create_admin_feature.buttonCreateFeature}       
@@ -69,6 +89,6 @@
                         #i18n{pluginwizard.pluginwizard_create_admin_feature.buttonBack}       
                     </button>	     
                 </div>  
-        </form>
+         </form>
     </div>
 </div>
