--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/commons/gt_html_admin_tabs.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/commons/gt_html_admin_tabs.html
@@ -1,8 +1,8 @@
 <${macro_def} tabs tab >
 <div>
     <ul class="nav nav-tabs">
-        <#if business_classes?? > 
-        <#list business_classes as business_class>
+        <#if business_classes?? >
+        <#list business_classes?sort_by('businessClass') as business_class>
         <li <${variable}if tab="${business_class.businessClass?lower_case}">class="active"</${variable}if>>
             <a href="jsp/admin/plugins/${plugin_name?lower_case}/Manage${business_class.businessClass?cap_first}s.jsp">
                 ${i18n_open}${plugin_name?lower_case}.manage_${business_class.businessClass?lower_case}s.pageTitle${i18n_close}
