--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_admin_features.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_admin_features.html
@@ -61,11 +61,11 @@
         <div class="form-actions">      
             <form class="default-form" method="post" action="jsp/site/Portal.jsp">
                 <input type="hidden" name="page" value="pluginwizard" /> 
-                <button type="submit" name="view_modifyDescription" class="btn btn-primary">
+                <button type="submit" name="view_manageBusinessClasses" class="btn btn-primary">
                     <i class="icon-chevron-left icon-white"></i>
                     #i18n{pluginwizard.pluginwizard_manage_plugin_admin_features.buttonBack}
                 </button>                        
-                <button type="submit" name="view_manageBusinessClasses" class="btn btn-primary">
+                <button type="submit" name="view_manageApplications" class="btn btn-primary">
                     #i18n{pluginwizard.pluginwizard_manage_plugin_admin_features.buttonNext}
                     <i class="icon-chevron-right icon-white"></i>
                 </button>  
