PLUGINWIZARD-70 : Changed MVC annotations used by XPages.
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@53889 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_xpage_alternative.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_xpage_alternative.html
@@ -35,10 +35,10 @@
  
 package fr.paris.lutece.plugins.${plugin_model.pluginName}.web;
 
+import fr.paris.lutece.portal.util.mvc.commons.annotations.View;
+import fr.paris.lutece.portal.util.mvc.xpage.MVCApplication;
+import fr.paris.lutece.portal.util.mvc.xpage.annotations.Controller;
 import fr.paris.lutece.portal.web.xpages.XPage;
-import fr.paris.lutece.plugins.mvc.MVCApplication;
-import fr.paris.lutece.plugins.mvc.annotations.Controller;
-import fr.paris.lutece.plugins.mvc.annotations.View;
 
 import javax.servlet.http.HttpServletRequest;
 
