PLUGINWIZARD-69 : Add the possibility to generate business classes with Date or boolean attributes.
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@53890 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_business_class_alternative.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_business_class_alternative.html
@@ -36,6 +36,14 @@ package fr.paris.lutece.plugins.${plugin_name}.business;
 import javax.validation.constraints.*;
 import org.hibernate.validator.constraints.*;
 
+<#list business_class.attributes as attribute>
+	<#if attribute.type == "Date">
+		<#assign hasDate=true>
+	</#if>
+</#list>
+<#if hasDate?? && hasDate>
+import java.sql.Date;
+</#if>
 
 /**
  * This is the business class for the object ${business_class.businessClass}
