--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/classic/gt_business_class_classic.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/classic/gt_business_class_classic.html
@@ -33,6 +33,15 @@
  */ 
 package fr.paris.lutece.plugins.${plugin_name}.business;
 
+<#list business_class.attributes as attribute>
+	<#if attribute.type == "Date">
+		<#assign hasDate=true>
+	</#if>
+</#list>
+<#if hasDate?? && hasDate>
+import java.sql.Date;
+</#if>
+
 /**
  * This is the business class for the object ${business_class.businessClass}
  */ 
