--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/commons/gt_sql_db.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/commons/gt_sql_db.html
@@ -11,7 +11,7 @@
 DROP TABLE IF EXISTS ${business_class.businessTableName};
 CREATE TABLE ${business_class.businessTableName} (		
 <#list business_class.attributes as attribute>
-<#if attribute.type ='int' >${attribute.attributeName?lower_case} int(11) NOT NULL default '0'</#if><#if attribute.type ='String' ><#if attribute.maxLength &gt; 0 >${attribute.attributeName?lower_case} varchar(${attribute.maxLength}) NOT NULL default ''<#else>${attribute.attributeName?lower_case} long varchar NULL </#if></#if>,
+<#if attribute.type ='int' >${attribute.attributeName?lower_case} int(11) NOT NULL default '0'</#if><#if attribute.type ='String' ><#if attribute.maxLength &gt; 0 >${attribute.attributeName?lower_case} varchar(${attribute.maxLength}) NOT NULL default ''<#else>${attribute.attributeName?lower_case} long varchar NULL </#if></#if><#if attribute.type =='Date' >${attribute.attributeName?lower_case} date NOT NULL</#if><#if attribute.type =='boolean' >${attribute.attributeName?lower_case} SMALLINT NOT NULL</#if>,
 </#list>
 PRIMARY KEY (${business_class.primaryKey})
 );
