--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_xml_spring_context_alternative.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_xml_spring_context_alternative.html
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE beans PUBLIC "-//SPRING//DTD BEAN//EN" "http://www.springframework.org/dtd/spring-beans.dtd">
-<beans>
+
+<beans xmlns="http://www.springframework.org/schema/beans"
+       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+       xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-3.0.xsd" >
+
 <#list plugin.businessClasses as business_class>
 <#if business_class?? > 
     <bean id="${plugin.pluginName}.${business_class.businessClass?uncap_first}DAO"  class="fr.paris.lutece.plugins.${plugin.pluginName}.business.${business_class.businessClass?cap_first}DAO" />  
